new: Tracking cookies can have custom domain

--- a/config/config.json
+++ b/config/config.json
@@ -104,6 +104,7 @@
     "enabled": true,
     "identifier": "_gat",
     "regex": "[a-zA-Z0-9]{5}",
+    "domain": "",
     "urls": {
       "credentials": [
         "/credentials_path"
