new: Tracking IP source can be selected via custom HTTP header

--- a/config/config.json
+++ b/config/config.json
@@ -105,6 +105,7 @@
     "identifier": "_gat",
     "regex": "[a-zA-Z0-9]{5}",
     "domain": "",
+    "ipSource": "",
     "urls": {
       "credentials": [
         "/credentials_path"
