Add watchdog: a module that helps to manage the access control based on rules  🎉

--- a/config/config.toml
+++ b/config/config.toml
@@ -151,6 +151,16 @@
 
 
 #
+# WATCHDOG
+#
+[watchdog]
+	enabled = true
+	# Monitor rules file changes and reload
+	dynamic = true
+	rules = "./config/watchdog.rules"
+	geoDb = "./config/geodb.mmdb"
+
+#
 # TRACKING
 #
 [tracking]
