Add support to configure the access to Redis via configuration file

--- a/config/config.toml
+++ b/config/config.toml
@@ -110,6 +110,17 @@
     filePath = "muraena.log"
 
 
+
+#
+# DB (redis)
+#
+[redis]
+	enabled = true
+	host = "127.0.0.1"
+	port = 6379
+	password = ""
+
+
 #
 # TLS
 #
