Add support to customize server TLS
Add the following configuration options:

- minVersion: contains the minimum TLS version that is acceptable. Default is set to TLS1.0
- preferServiceCipherSuites: controls whether the server selects the client's most preferred ciphersuite, or the server's most preferred ciphersuite. Default is set to true
- sessionTicketsDisabled: may be set to true to disable session ticket and PSK (resumption) support. Default is set to true
- insecureSkipVerify: controls whether muraena verifies the server's certificate chain and host name. Default is set to false

--- a/config/config.toml
+++ b/config/config.toml
@@ -134,6 +134,18 @@
     key = "./config/privkey.pem"
     root = "./config/fullchain.pem"
 
+	#
+	# Danger zone, be careful editing these settings
+	#
+	# Minimum supported TLS version: SSL3.0, TLS1.0, TLS1.1, TLS1.2, TLS1.3
+	minVersion = "TLS1.2"
+	preferServerCipherSuites = true
+	sessionTicketsDisabled =  true
+	# InsecureSkipVerify controls whether muraena verifies the server's
+	# certificate chain and host name.
+	insecureSkipVerify = false
+
+
 #
 # CRAWLER
 #
