Fix config files

--- a/config/config.github.toml
+++ b/config/config.github.toml
@@ -161,7 +161,7 @@ enabled = true
 # Monitor rules file changes and reload
 dynamic = true
 rules = "./config/watchdog.rules"
-geoDb = "./config/geodb.mmdb"
+geoDB = "./config/geoDB.mmdb"
 
 #
 # TRACKING
