--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,7 +3,7 @@ jobs:
   build:
     docker:
       - image: cimg/go:1.21
-    working_directory: /go/src/github.com/muraenateam/muraena
+    #working_directory: /go/src/github.com/muraenateam/muraena
 
     environment: # environment variables for the build itself
       TEST_RESULTS: /tmp/test-results # path to where test results will be saved
